--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -104,7 +104,7 @@ alyssa.cirtwill@gmail.com\\
 \begin{spacing}{2.0}
 
 \section*{Abstract}
-
+  [[was fine? Maybe lightly edit to make clear we're not doing a review]]
   \begin{enumerate}
 
     \item  Descriptions of ecological networks typically assume that the same interspecific interactions occur each time a community is observed. This contrasts with the known stochasticity of ecological communities: community composition, species abundances, and link structure all vary in space and time. Moreover, finite sampling generates variation in the set of interactions actually observed. For interactions that have not been observed, most data sets will not contain enough information for the ecologist to be confident that unobserved interactions truly did not occur.
@@ -124,13 +124,13 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
 
 \section*{Introduction}
 
-    Representing an ecological community as a network allows ecologists to address both community composition and the interactions between species~\citep{Roslin2016}. Identifying these interactions is a crucial step towards understanding (and predicting) the effects that species have on each other and the response of the community as a whole to external perturbations~\citep{Bartomeus2016,Giron2018}. Importantly, information is conveyed both by the presence and \emph{absence} of links between species. Presences and absences are not, however, equally certain. An observed link definitely occurred, but there are multiple reasons why a given link may not be observed. 
+    Representing an ecological community as a network allows ecologists to address both community composition and the interactions between species~\citep{Roslin2016}. Identifying these interactions is a crucial step towards understanding (and predicting) the effects that species have on each other and the response of the community as a whole to external perturbations~\citep{Bartomeus2016,Giron2018}. Importantly, information is conveyed both by the presence and \emph{absence} of links between species. Presences and absences are not, however, equally certain. An observed link definitely occurred, but there are multiple reasons why a given link may not be observed~\citep{Jordano2016}. 
 
 
-    First and foremost, ecological communities are known to be stochastic~\citep{Gotelli2000}. Community composition and abundances vary over space~\citep{Baiser2012} and time~\citep{Olesen2011a}, leading to variation in encounter probabilites and hence in interactions~\citep{Vazquez2005,Poisot2015,Graham2018}. Species must co-occur in order to be observed interacting, so any variation in co-occurrence will create variation in the set of observed interactions~\citep{Gravel2013}. Even assuming constant co-occurrence within a given study system, changing abundances can affect interactions if species which would otherwise interact become too rare to detect each other~\citep{Tylianakis2010}. Moreover, interactions vary over space~\citep{Kitching1987,Baiser2012,Emer2018}, time~\citep{Kitching1987,Olesen2011a,Lopez2017}, between individuals~\citep{Pires2011a,Fodrie2015,Novak2015}, throughout life cycles~\citep{Preston2014,Clegg2018}, and with environmental conditions~\citep{Poisot2015}.
+    First and foremost, ecological communities are known to be stochastic~\citep{Gotelli2000}. Community composition and abundances vary over space~\citep{Baiser2012} and time~\citep{Olesen2011a}, leading to variation in encounter probabilites and hence in interactions~\citep{Vazquez2005,Poisot2015,Graham2018}. Species must co-occur in order to be observed interacting, so any variation in co-occurrence will create variation in the set of observed interactions~\citep{Gravel2013}. Even assuming constant co-occurrence within a given study system, changing abundances can affect interactions if species which would otherwise interact become too rare to detect each other~\citep{Tylianakis2010,Jordano2016}. Moreover, interactions vary over space~\citep{Kitching1987,Baiser2012,Emer2018}, time~\citep{Kitching1987,Olesen2011a,Lopez2017}, between individuals~\citep{Pires2011a,Fodrie2015,Novak2015}, throughout life cycles~\citep{Preston2014,Clegg2018}, and with environmental conditions~\citep{Poisot2015}.
 
 
-    Beyond ``true" variation in network structure, several researchers have noted the effects of sampling intensity (e.g.,~\citealp{Martinez1999,Bluthgen2006,Bluthgen2007}). An assessment of the accumulation of interactions with increasing sampling effort suggests that it is even more challenging to correctly document interactions than species~\citep{Poisot2012,Bartomeus2013,Jordano2016,Giron2018,Graham2018}. As a result, it has been proposed that interactions should be described probabilistically and network metrics computed accordingly~\citep{Bartomeeus2013,Poisot2016}. Efforts in this vein usually take the form of creating model food webs that approximate observed empirical networks~\citep{Allesina2008,Williams2010,Rohr2016}. These models may be based on species traits and/or abundances~\citep{Rohr2016,Graham2018,more} or on simple abstract rules~\citep{Allesina2008,Williams2010}. Such networks provide an important ''reality check'' by allowing us to compare the observed network to what would be expected under a particular set of assumptions~\citep{Bartomeus2013,Weinstein??}. They allow us to estimate the numbers of interactions which have not been observed and predict which unobserved interactions are most likely~\citep{Bartomeus2013}.
+    Beyond ``true" variation in network structure, several researchers have noted the effects of sampling intensity (e.g.,~\citealp{Martinez1999,Bluthgen2006,Bluthgen2007,Jordano2016}). An assessment of the accumulation of interactions with increasing sampling effort suggests that it is even more challenging to correctly document interactions than species~\citep{Poisot2012,Bartomeus2013,Jordano2016,Giron2018,Graham2018}. As a result, it has been proposed that interactions should be described probabilistically and network metrics computed accordingly~\citep{Bartomeeus2013,Poisot2016}. Efforts in this vein usually take the form of creating model food webs that approximate observed empirical networks~\citep{Allesina2008,Williams2010,Rohr2016}. These models may be based on species traits and/or abundances~\citep{Rohr2016,Graham2018,more} or on simple abstract rules~\citep{Allesina2008,Williams2010}. Such networks provide an important ''reality check'' by allowing us to compare the observed network to what would be expected under a particular set of assumptions~\citep{Bartomeus2013,Weinstein??}. They allow us to estimate the numbers of interactions which have not been observed and predict which unobserved interactions are most likely~\citep{Bartomeus2013}. Alternatively, it is possible to estimate the number of unobserved interactions which likely occurred~\citep{Jordano2016}. This...
 
     
     [[Trying to give a more precise summary of our goal here.]]
@@ -233,7 +233,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
     % All of the above methods for estimating the variance of $\lambda$ include the number of samples $n$. This means that where the number of samples $n$ is very low (e.g., for rare species), there will be considerable uncertainty around our estimate of $\lambda$. In Fig.~\ref{upper_limits}, we derive the Clopper-Pearson interval to explore how the estimate of $\lambda$ (for true $\lambda = 0$) varies with sample size. At a small sample size, the 95\% confidence interval is nearly (0, 1). To establish that species are not interacting with any acceptable certainty requires tens of observations of the two species co-occurring but not interacting. Most data sets will lack such extensive sampling across all species pairs, but we can still use a Bayesian approach to supplement the available data with other sources of information.
 
 
-    We can create a simple Bayesian approach to modelling the probability of an interaction occurring ($\lambda$) by combining a maximum likelihood estimate of $\lambda$ with a prior distribution (described in the next section) and a normalising function. The MLE of $\lambda$, based on the number of observed interactions $k$ and observed co-occurrances $n$ is $\lambda = \frac{k}{n}$. The most appropriate prior distribution for a probability such as $\lambda$ is the beta distribution:
+    We can create a simple Bayesian approach to modelling the probability of observing an interaction ($\lambda$) by combining a maximum likelihood estimate (MLE) of $\lambda$ with a prior distribution (described in the next section) and a normalising function. The MLE of $\lambda$ can be modelled as a Bernoulli trial based on the number of observed interactions $k$ and observed co-occurrances $n$: $\lambda = \frac{k}{n}$. The most appropriate prior distribution for a probability such as $\lambda$ is the beta distribution:
 
     \begin{equation}
           \lambda \sim Beta(\alpha,\beta) , \label{prior}
@@ -268,7 +268,8 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
     %       \end{equation}
 
 
-    \subsubsection*{Choosing a prior distribution}    
+    \subsubsection*{Choosing a prior distribution}  [[expand]]
+      [[expand]]
 
       Parameters $\alpha$ and $\beta$ determine the shape of the prior distribution of $\lambda$, which follows a beta distribution. These are called hyper parameters. The prior may be chosen to be uninformative, if no external information is available, or may draw on information such as distributions of connectance across webs, degree distributions, or trait-matching functions (see \emph{Appendix S3} for details and a simple quantitative example). 
 
@@ -276,12 +277,32 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
       It is important to ensure that an informative prior accurately reflects the focal  system. For example, if the system is a large network containing many plant species and insects from different families, it is inappropriate to use a prior distribution drawn from a small network describing interactions between different genotypes of a single plant species and a set of closely-related insects. The similarity of traits across genotypes within a species means that an insect which interacts with one genotype is likely to interact with many others. Trait differences between species mean that a species-species network will likely contain fewer interactions than a genotype-species network. Similarly, highly-aggregated networks containing nodes which represent whole classes or families are likely to have very different structures than networks where most nodes represent single species as aggregated nodes are likely to have more interaction partners than single species.
 
 
-      The choice of prior will depend on the information available. In general, it is best to use a prior taken from a similar system as emphasised above. If such data are not available, a prior based on many networks with a similar level of resolution could be useful, as could a prior based on a preliminary round of sampling (analogous to ``training data"). If there is no suitable informative prior, it is best to use an explicitly uninformative prior. While an uninformative prior will not greatly reduce variance about $\lambda$, it does clearly state our lack of prior knowledge and will not bias our conclusions.
+      The choice of prior will depend on the information available and the question of interest. In general, it is best to use a prior taken from a similar system as emphasised above. If such data are not available, a prior based on many networks with a similar level of resolution could be useful, as could a prior based on a preliminary round of sampling (analogous to ``training data"). If there is no suitable informative prior, it is best to use an explicitly uninformative prior. While an uninformative prior will not greatly reduce variance about $\lambda$, it does clearly state our lack of prior knowledge and will not bias our conclusions. Similarly, if detailed information is available but refers to the question at hand, it is best to use a less informative prior so as not to force a particular result. For example, if researchers are interested in testing whether body-size ratios affect probabilities of interaction they should not use a prior which predicts interactions based on body sizes.
+
+      \textbf{Uninformative priors}
+
+        An uninformative prior is chosen so as not to bias the posterior distribution in any particular direction. That is, all of the information will come from the observed data. For pairs of species with little or no observed data, an uninformative prior will leave large variance about $\lambda$ and reflect our lack of knowledge about the pair. Since we model $\lambda$ as a Bernoulli trial, the appropriate uninformative prior is Jeffreys prios: a beta distribution with $\alpha$=$\beta$=0.5. The sum of $\alpha$ and $\beta$ is roughly equivalent to the weight of the prior, so Jeffreys prior has equal weight to a single observation. An uninformative prior is most appropriate when considering a novel system or a system where the only prior knowledge available directly relates to the question we wish to analyse.
+
+
+      \textbf{Informed priors}
+
+        In most cases, researchers will be able to draw upon prior knowledge for at least some interactions. One very simple example is the assumption that, in a food web, plants will not consume any prey. There is very little uncertainty around the lack of a observed predation of any plant upon any animal in the system, regardless of how often the plant and animal are observed together. 
+
+        [[addressing different types of uncertainty]]
+        [[drawing upon system-specific or broader knowledge]]
+
+        If we are interested only in interactions which occur in the focal system under current environmental conditions, we might use a prior which includes probabilities of co-occurrence. That is, we could limit the set of potential interactions to pairs of species which currently co-occur~\citep{Gravel2013}, condition probabilities of interaction on probabilities of co-occurrence based on abundance~\citep{}, etc. Note that such models lump together interaction uncertainty and process uncertainty and are only concerned with measuring detection uncertainty. Whether or not this is appropriate will depend upon the question of interest.
+
+
+        If traits governing interactions are known (e.g., body size in food webs~\citep{Gravel2013} or corolla depth in pollination networks~\citep{Graham,Weinstein}), then trait-based models may be used as a prior. Such models address interaction uncertainty directly (i.e., they estimate whether a pair of species \emph{can} interact, regardless of whether they are likely to encounter each other). To address both interaction and process uncertainty, a researcher might combine trait-based and co-occurrence models into a single prior. Such a model would reduce the uncertainty about unobserved interactions, but at the cost of adding more assumptions about the study system. This type of very detailed prior is therefore most appropriate in very well-understood systems where a great deal of expert knowledge can be applied.
+
+
+      \textbf{Empirical priors} [[using data from the data in question]][[contentious]][[should these be drawn from hyperpriors or fixed for each interaction]]
 
 
   \subsection*{An empirical example}
-
-      To illustrate the process of constructing a Bayesian network, we use the comprehensively-sampled system of willows (\emph{Salix}), herbivorous gallers, and their natural enemies described by~\citet{Kopelke2017}. This dataset consists of a single community type sampled across Europe over 29 years and at 374 unique locations. The data were collected over 29 years at 374 unique locations across Europe. The meta-network consists of 1,173 different interactions between 52 \emph{Salix} nodes, 92 herbivore nodes, and 126 natural enemy nodes (see \emph{Appendix S4} for details). 
+    [[Make the point of this clearer]]
+      To illustrate the process of constructing a Bayesian network, we use the comprehensively-sampled system of willows (\emph{Salix}), herbivorous gallers, and their natural enemies described by~\citet{Kopelke2017}. This dataset consists of a single community type sampled across Europe over 29 years and at 374 unique locations. The meta-network consists of 1,173 different interactions between 52 \emph{Salix} nodes, 92 herbivore nodes, and 126 natural enemy nodes (see \emph{Appendix S4} for details). 
 
 
       The high spatiotemporal resolution and unusually high sampling effort of this dataset make it well suited for illustrating the difficulties in completely sampling a network. To show the gaps in sampling, we compared the frequencies of observed co-occurrences and interactions. We analysed both the \emph{Salix}-galler and galler-natural enemy components of the network but, for brevity, present only the latter here (see~\emph{Appendix S5} for \emph{Salix}-galler results). 
@@ -331,7 +352,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
   Our results also demonstrate how incomplete detection of interactions scales up to affect network structure. The structure of the well-sampled network used in our case study is most similar to the structure of simulated networks including only 50\% of the interactions suggested by the posterior distribution of interaction probabilities. If our descriptions of empirical systems are missing up to half of the feasible interactions, then it is vital to acknowledge this inherent uncertainty before comparing structures across systems or relating structure to stability.
 
 
-  Based on the framework described above, we can now offer some recommendations for improved descriptions of ecological interactions. First, sample sizes should be as large as possible in order to reduce detection uncertainty. Second, where sampling on the order of 30-50 observations per species pair is not possible (i.e., in most cases), researchers should acknowledge the varying levels of confidence surrounding interactions between different species pairs. Including the $n$ and $k$ values for each interaction will clearly indicate which unobserved interactions are most likely to be observed with further sampling and which estimates are more reliable. Third, the uncertainty around interactions should be incorporated in calculations of network properties. Re-sampling networks based on a probabilistic understanding of networks is straightforward and gives distributions for network properties rather than point estimates. This not only acknowledges the fact that interactions vary over time and space but will also facilitate comparisons between networks by adding confidence intervals to estimates of network properties. This will allow us to say whether networks have different structures \emph{and} whether those differences are greater than we would expect given the inherent variability of interactions. To facilitate the practical application of these recommendations, we provide all code used in this paper in the supplementary material. 
+  Based on the framework described above, we can now offer some recommendations for improved descriptions of ecological interactions. First, sample sizes should be as large as possible in order to reduce detection uncertainty. Second, researchers should acknowledge the varying levels of confidence surrounding interactions between species pairs. In the absence of strong prior information a very high level of sampling (i.e., 30-50 observations in our example) is needed \emph{for each species pair}. This is not likely to be possible for most studies. including the $n$ and $k$ values for each interaction will clearly indicate which unobserved interactions are most likely to be observed with further sampling and which estimates are more reliable. Where there are strong prior expectations about pairs of species that will not interact, these should be explicitly stated so that readers know which zeros in an interaction matrix are based on observed data and which are based primarily upon expert knowledge. Third, the uncertainty around interactions should be incorporated in calculations of network properties. Re-sampling networks based on a probabilistic understanding of networks is straightforward and gives distributions for network properties rather than point estimates. This not only acknowledges the fact that interactions vary over time and space but will also facilitate comparisons between networks by adding confidence intervals to estimates of network properties. This will allow us to say whether networks have different structures \emph{and} whether those differences are greater than we would expect given the inherent variability of interactions. To facilitate the practical application of these recommendations, we provide all code used in this paper in the supplementary material. 
 
 
 \section*{Acknowledgements}
