--- a/manuscript/supplemental.tex
+++ b/manuscript/supplemental.tex
@@ -152,6 +152,31 @@ alyssa.cirtwill@gmail.com\\
     
     \noindent where the function $B$ is the beta function. The posterior distribution of $\lambda$ therefore follows the beta distribution with new parameters $\alpha'= \alpha+k$ and $\beta'=\beta+n-k$. 
 
+
+  \subsection*{Properties of the beta distribution}
+  
+    %   It is common to perform analyses that require calculating higher-order network properties in interaction networks. The fact that the posterior distribution of $\lambda$ follows a beta distribution makes it straightforward to compute moments and other properties needed for these analyses. 
+
+
+    %   The \textbf{average} of $\lambda$ is: 
+    %       \begin{equation}
+    %         \bar{\lambda} = \frac{\alpha+k}{\alpha+\beta+n} ,
+    %         \label{mean}
+    %       \end{equation}
+
+    %     and its \textbf{variance} is:  
+    %       \begin{equation}
+    %         Var(\lambda|k) = \frac{(\alpha + k)(\beta + n - k)}{(\alpha + \beta + n)^{2}(\alpha + \beta + n +1)}
+    %         \label{variance}
+    %       \end{equation}
+
+    %     The \textbf{mode} of the distribution is:
+    %       \begin{equation}
+    %         \hat{\lambda} = \frac{\alpha + k - 1}{\alpha + \beta + n - 2} .
+    %         \label{mode}
+    %       \end{equation}
+
+
 \clearpage
 
 \section*{Appendix S3: Calculating uninformative and informative priors}
