--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -130,12 +130,14 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
     First and foremost, ecological communities are known to be stochastic~\citep{Gotelli2000}. Community composition and abundances vary over space~\citep{Baiser2012} and time~\citep{Olesen2011a}, leading to variation in encounter probabilites and hence in interactions~\citep{Vazquez2005,Poisot2015,Graham2018}. Species must co-occur in order to be observed interacting, so any variation in co-occurrence will create variation in the set of observed interactions~\citep{Gravel2013,Graham2018}. Even assuming constant co-occurrence within a given study system, changing abundances can affect interactions if species which would otherwise interact become too rare to detect each other~\citep{Tylianakis2010,Jordano2016}. Moreover, interactions vary over space~\citep{Kitching1987,Baiser2012,Emer2018}, time~\citep{Kitching1987,Olesen2011a,Lopez2017}, between individuals~\citep{Pires2011a,Fodrie2015,Novak2015}, throughout life cycles~\citep{Preston2014,Clegg2018}, and with environmental conditions~\citep{Poisot2015}.
 
 
-    Beyond ``true" variation in network structure, several researchers have noted the effects of sampling intensity (e.g.,~\citealp{Martinez1999,Bluthgen2006,Bluthgen2007,Jordano2016}). An assessment of the accumulation of interactions with increasing sampling effort suggests that it is even more challenging to correctly document interactions than species~\citep{Guimera2009,Poisot2012,Bartomeus2013,Jordano2016,Giron2018,Graham2018}. As a result, it has been proposed that interactions should be described probabilistically and network metrics computed accordingly~\citep{Bartomeeus2013,Poisot2016}. Efforts in this vein usually take the form of creating model food webs that approximate observed empirical networks~\citep{Allesina2008,Guimera2009,Williams2010,Rohr2016}. These models may be based on species traits and/or abundances~\citep{Rohr2016,Weinstein2017,Graham2018} or on simple abstract rules~\citep{Allesina2008,Guimera2009,Williams2010}. Such networks provide an important ''reality check'' by allowing us to compare the observed network to what would be expected under a particular set of assumptions~\citep{Bartomeus2013,Weinstein??}. They allow us to estimate the numbers of interactions which have not been observed~\citep{Jordano2016,Weinstein2017} and predict which unobserved interactions are most likely~\citep{Guimera2009,Bartomeus2013}. 
+    Beyond ``true" variation in network structure, several researchers have noted the effects of sampling intensity (e.g.,~\citealp{Martinez1999,Bluthgen2006,Bluthgen2007,Jordano2016}). An assessment of the accumulation of inter0actions with increasing sampling effort suggests that it is even more challenging to correctly document interactions than species~\citep{Guimera2009,Poisot2012,Bartomeus2013,Jordano2016,Giron2018,Graham2018}. As a result, it has been proposed that interactions should be described probabilistically and network metrics computed accordingly~\citep{Bartomeeus2013,Poisot2016}. Efforts in this vein usually take the form of creating model food webs that approximate observed empirical networks~\citep{Allesina2008,Guimera2009,Williams2010,Rohr2016}. These models may be based on species traits and/or abundances~\citep{Rohr2016,Weinstein2017,Weinstein2017a,Graham2018} or on simple abstract rules~\citep{Allesina2008,Guimera2009,Williams2010}. Such models provide an important ''reality check'' by allowing us to test hypotheses about the factors structuring ecological networks~\citep{Bartomeus2013,Weinstein2017.Weinstein2017a,Graham2018}. They can also allow us to estimate the numbers of interactions which have not been observed~\citep{Jordano2016,Weinstein2017a} and predict which unobserved interactions are most likely~\citep{Guimera2009,Bartomeus2013}. 
 
-    
-    [[Trying to give a more precise summary of our goal here.]]
-    While predictive networks acknowledge the variability of interaction networks, they do not quantify the different degrees of uncertainty about different interactions. In fact, many assume that all interactions which actually occur have been observed and that there are no false positives~\citep{Bartomeus2016,others?}. This amounts of assuming that, while the strengths or frequencies of interactions may vary, we can be certain about the structure of the binary presence or absence of interactions. Other models assume that the probability of interaction is constant during the sampling period~\citep{Bartomeus2013}.  Here we show that both assumptions are unlikely due to the many layers of uncertainty affecting the observation of interactions~\citep{Jordano2016}. Increased or improved sampling could reduce many of these sources uncertainty, but we suspect that most research groups limit sampling due to time or budget constraints. Given that increased sampling is not likely to be a viable solution to the problem of uncertainty about unobserved interactions (see Box 1), we offer a Bayesian framework to capture the uncertainty surrounding interactions which were not observed. This framework can be applied to any network type and does not require strong assumptions or pre-existing data about the study system, but can include such information if it is available.
 
+    [[These two paragraphs try to frame our study more clearly. Any help to shorten them?]]
+    To date, models incorporating uncertainty have either been very general (e.g.,~\citet{Guimera2009,Gravel2013}) or very system-specific (e.g.,~\citet{Bartomeus2013,Weinstein2017,Weinstein2017a,Graham2018}). The general models may not include any system-specific information, while the system-specific models may not be applicable outside of their system of origin. Here we propose a simple Bayesian framework that can include broad general trends in network structure or highly specific expert knowledge, depending on the situation. This framework is designed to make the assumptions used when building networks more explicit and to quantify our uncertainty around each interaction in a network. Importantly, the simplicity of the framework means it should be easily applicable to any network type or study system.
+
+
+    First, we provide a brief description of the nested levels of uncertainty affecting ecological network construction. In the context of this uncertainty, which can be reduced but usually not eliminated by high-quality sampling (\citealp[see Box 1]{Bartomes2013}), we present our Bayesian framework for combining observed data with a prior expectation of network structure. We conclude with a worked example applying this framework to an intensively-sampled willow-galler network. We find that even the highest-quality empirical network we could find had substantial uncertainty about whether many pairs of species interact, demonstrating the need to include information about this uncertainty in published networks. We also show that this interaction-level uncertainty leads to uncertainty about estimates of network structure, with important implications for comparisons across networks.
 
 
     % Development of molecular sampling methods such as DNA barcoding hold great potential for uncovering interactions missed by other sampling methods (such as visit surveys)~\citep{Giron2018}, but these novel methods are also somewhat error-prone at present~\citep{}. 
@@ -164,24 +166,26 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
 
         \subsubsection*{Could the species interact under ideal conditions?} 
 
-          First, and most fundamentally, some interactions are feasible if a pair of species should co-occur while others are not. Assuming that the feasibility of interactions depends on the traits of species involved, we can define the probability of an interaction $L$ given some description of trait-matching $\mathbf{T}$ as $P(L|\mathbf{T}) = \lambda$~\citep{Gravel2013,others}. 
+          First, and most fundamentally, some interactions are feasible if a pair of species should co-occur while others are not~\citep{Poisot2015}. Assuming that the feasibility of interactions depends on the traits of species involved, we can define the probability of an interaction $L$ given some description of trait-matching $\mathbf{T}$ as $P(L|\mathbf{T}) = \lambda$~\citep{Gravel2013,others}. 
           In some cases the traits prohibiting an interaction are known, and there will be little uncertainty about $\lambda$.
-          In most cases, however, it is not known what traits might prohibit an interaction~\citep{Dormann2017}. Pollinators may visit plants outside of those predicted based on "pollination syndromes"~\citep{Weinstein2017} and herbivores may consume animal prey when it becomes accessible~\citep{}. These examples show that we often cannot say that an interaction absolutely does not occur. Instead, an unobserved interaction may be a rare phenomenon with $\lambda>0$ and the associated zero in an interaction matrix might be false. This uncertainty is partly addressed by trait-matching models in which species with better-matched traits are more likely to interact~\citep{Bartomeus2016,Jordano2016}. As these models improve and include better information about the influence of traits on interactions, the uncertainty will be reduced~\citep{Jordano2016} and $\lambda$ should either tend to 0 or to 1. Nevertheless, every model is imperfect and lacks information that could be used to define constraints on at least some interactions~\citep{Dormann2017}. Until these gaps are filled, some uncertainty will remain about whether some species pairs could interact.
+          In most cases, however, it is not known what traits might prohibit an interaction~\citep{Dormann2017}. Pollinators may visit plants outside of those predicted based on "pollination syndromes"~\citep{Weinstein2017a} and herbivores may consume animal prey when it becomes accessible~\citep{}. These examples show that we often cannot say that an interaction absolutely does not occur. Instead, an unobserved interaction may be a rare phenomenon with $\lambda>0$ and the associated zero in an interaction matrix might be false. This uncertainty is partly addressed by trait-matching models in which species with better-matched traits are more likely to interact~\citep{Bartomeus2016,Jordano2016}. As these models improve and include better information about the influence of traits on interactions, the uncertainty will be reduced~\citep{Jordano2016} and $\lambda$ should either tend to 0 or to 1. Nevertheless, every model is imperfect and lacks information that could be used to define constraints on at least some interactions~\citep{Dormann2017}. Until these gaps are filled, some uncertainty will remain about whether some species pairs could interact.
 
 
         \subsubsection*{Did the species interact during sampling?} 
 
-          Assuming that an interaction is feasible (i.e., $L=1$;), an interaction may still not occur at a particular place or time~\citep{Graham2018}. This could be because the two species do not co-occur or, if they did occur, because constraints such as inclement weather or low abundance prevented the interaction~\citep{Jordano2016,Graham2018} or because a more preferred interaction partnre was available~\citep{Weinstein2017}. For example, a rare galler may not parasitize a rare plant because they do not encounter each other. 
+          Assuming that an interaction is feasible (i.e., $L=1$;), an interaction may still not occur at a particular place or time~\citep{Poisot2015,Graham2018}. This could be because the two species do not co-occur or, if they did occur, because constraints such as inclement weather or low abundance prevented the interaction~\citep{Jordano2016,Graham2018}, a more preferred interaction partner was available~\citep{Weinstein2017a}, or substantial individual variation in traits meant that local individuals could not interact even if the species in general can~\citep{Gravel2013,Poisot2015}. For example, a rare galler may not parasitize a rare plant because they do not encounter each other. 
           We can define the local realisation of an interaction, $X$, given that the interaction is feasible, as a stochastic process with associated probability $P(X|L=1)=\chi$. It is unlikely that $\chi=1$  except in the case of obligate specialists who always interact whenever they co-occur and always co-occur. When $\chi<1$ we cannot be sure whether an unobserved interaction did not occur and when it occurred but was not observed.
 
           This phenomenon of interaction contingencies is usually not considered in network studies, but there is a rich literature in community ecology  on the topic. Phenological matching~\citep{MillerRushing2010,Gezon2016}, species preferences~\citep{Pires2011,Novak2015,Coux2016}, and fear effects~\citep{Luttbeg2005,Wirsing2008} are just some of the factors contributing to variation in the frequency of interactions between a given pair of species. Some of these factors can be addressed in mesocosm studies of networks (e.g., environmental conditions can be held stable) or could be included in models along the line of trait-matching models (e.g., phenological matching). Expanding sampling to cover a broader spatial or temporal range (e.g., sampling in a variety of microhabitats or during a variety of weather conditions) will also help to reduce uncertainty if resource constraints permit. As long as researchers wish to sample empirical networks subject to changing conditions, however, it is not likely that they will be able to eliminate all uncertainty about whether or not pairs of species will interact during a given sampling period.
 
 
+          Some models attempt to eliminate the sources of variation above by sampling intensively over a short time, during which probabilities of interaction are assumed to be constant~\citep{Bartomeus2013,Weinstein2017,Weinstein2017a}. Any remaining variation in the interactions observed is therefore assumed to be due to detection uncertainty. This assumption may be accurate for some systems where the environment is relatively constant, there is little intraspecific variation in traits or preferences, etc. In most systems, and for any effort to compile a metaweb that will apply over broader spatial and temporal scales, probabilities of interaction are likely to vary during sampling.
+
          % One proposed solution to the problem of process uncertainty is to use repeated sampling of networks. For example,~\citet{Weinstein2017-wrong one?} used repeated sampling to estimate the daily probability of detecting an interaction and thereby attempted to separate detection and process uncertainty.[[This apparently confused R3]] While conceptually attractive, this approach is unsuitable for interactions occurring over longer time scales (e.g., associations between hosts and parasitoids with a single generation per year), which would require multi-year sampling efforts, or very rare interactions which would require extremely high sampling effort to detect. Moreover, the faster accumulation of species than interactions means that repeated sampling will tend to introduce more unobserved interactions than observed interactions unless the number of samples is high enough to ensure that all species present have been observed~\citep{Poisot2012,Jordano2016}.
 
           \textbf{Forbidden links}
 
-            Both of the above sources of uncertainty (i.e., whether species would be able to interact given their traits and whether they are able to interact at a particular place and time) are addressed in the concept of "forbidden links"~\citep{Jordano2016}. In this framework, all links which are prevented by spatio-temporal uncoupling~\citep{Jordano1987}, physiological constraints~\citep{Jordano1987,More2012}, etc. are considered "structural zeros" that cannot be observed~\citep{Jordano2016}. We conceptually distinguish between physiological constraints and spatio-temporal uncoupling to allow for cases in which a species is introduced to a new habitat, expands its range, or shifts phenology. In such cases, links which are forbidden due to physiological constraints remain forbidden but links previously forbidden due to spatio-temporal mismatch could potentially occur. 
+            Both of the above sources of uncertainty (i.e., whether species would be able to interact given their traits and whether they are able to interact at a particular place and time) are addressed in the concept of "forbidden links"~\citep{Jordano2016}. In this framework, all links which are prevented by spatio-temporal uncoupling~\citep{Jordano1987}, physiological constraints~\citep{Jordano1987,More2012}, etc. are considered "structural zeros" that cannot be observed~\citep{Jordano2016}. We conceptually distinguish between physiological constraints and spatio-temporal uncoupling to allow for cases in which a species is introduced to a new habitat, expands its range, or shifts phenology~\citep{Gravel2013}. In such cases, links which are forbidden due to physiological constraints remain forbidden but links previously forbidden due to spatio-temporal mismatch could potentially occur. 
 
 
         \subsubsection*{Detection uncertainty} 
@@ -200,7 +204,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
         The obvious rule of thumb to reduce uncertainty is ``sample more". Increasing sample sizes will reduce uncertainty about the upper bound of the interaction probability and will also increase the probability of detecting unlikely or cryptic interactions (e.g., interactions where $L$=1 but process or detection uncertainty is high). Despite these benefits, we note that there are limits to the utility of increased sampling. Since the probability of observing the co-occurrence of two species will always be higher than the probability of observing their interaction (since the probability of interaction is conditional on both interaction partners being present), we will accumulate observations of co-occurrences faster than we will accumulate observations of interactions (Fig.~\ref{histograms}C). Thus, the more we sample, the more zeros will appear in our interaction matrix.
 
 
-        An added complication is that increased sampling will not reduce uncertainty evenly across interactions. To record an interaction between A and B, we need to identify both partners correctly (a non-trivial problem in many food webs; e.g.~\citealp{Kaartinen2011,Roslin2016}). For both molecular and rearing techniques, certain types of interactions may go unnoticed due to technical challenges~\citep{Wirta2014}. This can bias the set of recorded interactions towards those that are easier to observe~\citep{Jordano2016}.
+        An added complication is that increased sampling will not reduce uncertainty evenly across interactions. To record an interaction between A and B, we need to identify both partners correctly (a non-trivial problem in many food webs; e.g.~\citealp{Kaartinen2011,Roslin2016}). For both molecular and rearing techniques, certain types of interactions may go unnoticed due to technical challenges~\citep{Wirta2014}. This can bias the set of recorded interactions towards those that are easier to observe~\citep{Carstensen2014,Jordano2016}.
 
 
         Most importantly, if two species are never observed co-occurring during several days of sampling then repeated sampling reveals nothing about their probability of interacting should they ever co-occur. Intensive sampling is, therefore, an important step towards reducing uncertainty in ecological networks but is unlikely to be enough in most cases. 
@@ -293,16 +297,16 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
         [[addressing different types of uncertainty]]
         [[drawing upon system-specific or broader knowledge]]
 
-        If we are interested only in interactions which occur in the focal system under current environmental conditions, we might use a prior which includes probabilities of co-occurrence. That is, we could limit the set of potential interactions to pairs of species which currently co-occur~\citep{Gravel2013}, condition probabilities of interaction on probabilities of co-occurrence based on abundance~\citep{}, etc. Note that such models lump together interaction uncertainty and process uncertainty and are only concerned with measuring detection uncertainty. Whether or not this is appropriate will depend upon the question of interest.
+        If we are interested only in interactions which occur in the focal system under current environmental conditions, we might use a prior which includes probabilities of co-occurrence. That is, we could limit the set of potential interactions to pairs of species which currently co-occur, condition probabilities of interaction on probabilities of co-occurrence based on abundance or habitat use, etc.~\citep{Gravel2013,Weinstein2017} Note that such models lump together interaction uncertainty and process uncertainty and are only concerned with measuring detection uncertainty. Whether or not this is appropriate will depend upon the question of interest.
 
 
-        If traits governing interactions are known (e.g., body size in food webs~\citep{Gravel2013} or corolla depth in pollination networks~\citep{Weinstein2017,Graham}), then trait-based models may be used as a prior. Such models address interaction uncertainty directly (i.e., they estimate whether a pair of species \emph{can} interact, regardless of whether they are likely to encounter each other). To address both interaction and process uncertainty, a researcher might combine trait-based and co-occurrence models into a single prior. Such a model would reduce the uncertainty about unobserved interactions, but at the cost of adding more assumptions about the study system. This type of very detailed prior is therefore most appropriate in very well-understood systems where a great deal of expert knowledge can be applied.
+        If traits governing interactions are known (e.g., body size in food webs~\citep{Gravel2013} or corolla depth in pollination networks~\citep{Weinstein2017a,Graham}), then trait-based models may be used as a prior. Such models address interaction uncertainty directly (i.e., they estimate whether a pair of species \emph{can} interact, regardless of whether they are likely to encounter each other). To address both interaction and process uncertainty, a researcher might combine trait-based and co-occurrence models into a single prior. Such a model would reduce the uncertainty about unobserved interactions, but at the cost of adding more assumptions about the study system. This type of very detailed prior is therefore most appropriate in very well-understood systems where a great deal of expert knowledge can be applied, or in systems which are believed to follow general rules of, for example, allometric scaling~\citep{Gravel2013}. Where there is less system-specific prior knowledge, we can use prior models based on general trends in allometric scaling~\citep{Riede2011,Gravel2013}.
 
 
         An informed prior could be based on one or a few traits, as those described above, or it could incorporate a great deal of information about co-occurrence and encounter probabilities, forbidden links, etc.~\citep{Jordano2016}. Importantly, the complexity of a prior model depends both on the information available and on the question of interest. If researchers wish to test for an effect of body mass ratios on interaction probabilities, for example, they should not include body mass in their prior. Including a trait in a prior means assuming that trait has an effect on which interactions we detect and it is therefore inappropriate to test for such an effect in the same study.
 
 
-        The relevant traits and degree of trait-matching between interaction partners is likely to vary between systems~\citep{Gravel2013,Weinstein2017}. We therefore urge caution when using a model developed for one system as the prior for another. 
+        The relevant traits and degree of trait-matching between interaction partners is likely to vary between systems~\citep{Gravel2013,Weinstein2017a}. We therefore urge caution when using a model developed for one system as the prior for another. 
 
 
       \textbf{Empirical priors} [[using data from the data in question]][[contentious]][[should these be drawn from hyperpriors or fixed for each interaction]]
@@ -315,6 +319,8 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
 
       The high spatiotemporal resolution and unusually high sampling effort of this dataset make it well suited for illustrating the difficulties in completely sampling a network. To show the gaps in sampling, we compared the frequencies of observed co-occurrences and interactions. We analysed both the \emph{Salix}-galler and galler-natural enemy components of the network but, for brevity, present only the latter here (see~\emph{Appendix S5} for \emph{Salix}-galler results). 
 
+
+      Unlike~\citet{Bartomeus2013,Weinstein2017,Weinstein2017a}, our model can include interactions for species which were observed infrequently (or not at all) during sampling. 
 
     \subsubsection*{Computing the prior and posterior distributions}
 
@@ -348,16 +354,17 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
 
   Scaling up to network structure, we found that the connectance and mean links per galler and natural enemy were much lower in the observed web (C=0.078, $L_{galler}$=9.99, and $L_{natural enemy}$=7.45, respectively) than in the posterior webs (0.186 $\leq$ C $\leq$ 0.198, 13.4 $\leq L_{galler} \leq$ 14.6, and 23.4 $\leq L_{natural enemy} \leq$ 25.0). When the detection probability was relatively low (i.e., 50\%), however, the properties of randomised networks became similar to those in the observed webs (Fig.~\ref{posterior_webs}A,B,D). Nestedness was higher in the observed network (NODF=6.85) than in the posterior webs (6.31 $\leq NODF \leq$ 6.82; Fig.~\ref{posterior_webs}C); in this case, the stronger the detection filter, the farther apart were the observed and posterior webs. In general, the observed network is most similar to simulated networks where only half of the plausible links are detected. 
 
+  % Poisot2015 - also found that NODF was higher in the empirical data than in sims. 
 
 \section*{Discussion}
 
-  Real interaction networks vary over several dimensions~\citep{Kitching1987,Olesen2011a,Pires2011a,Baiser2012,Fodrie2015,Novak2015}, leading to pervasive under-estimation of interactions in published networks~\citep{Jordano2016}. Even in the most extensive data set that we could find, there was very little empirical data for each species pair. Most pairs of species were not observed co-occurring even once, less than 10\% of species pairs were observed interacting, and no pairs were observed to co-occur frequently enough to conclude that their probability of interacting was below 0.01. This suggests that limited sampling is a major source of uncertainty in empirical networks. This dataset also illustrates the problem of process uncertainty - pairs of species which were observed interacting did not interact in all of the samples in which they co-occurred. Increasing sampling is therefore likely to add more zeros than ones to an interaction network.
+  Real interaction networks vary over several dimensions~\citep{Kitching1987,Olesen2011a,Pires2011a,Baiser2012,Fodrie2015,Novak2015}, leading to pervasive under-estimation of interactions in published networks~\citep{Jordano2016}. Even in the most extensive data set that we could find, there was very little empirical data for each species pair. Most pairs of species were not observed co-occurring even once, less than 10\% of species pairs were observed interacting, and no pairs were observed to co-occur frequently enough to conclude that their probability of interacting was below 0.01. This suggests that limited sampling is a major source of uncertainty in empirical networks, in agreement with~\citet{Jordano2016,Weinstein2017a,Weinstein2017}. This dataset also illustrates the problem of process uncertainty - pairs of species which were observed interacting did not interact in all of the samples in which they co-occurred. Increasing sampling is therefore likely to add more zeros than ones to an interaction network.
 
 
-  Detectability estimated at 23.3\% in~\citet{Weinstein2017}
+  Detectability estimated at 23.3\% in~\citet{Weinstein2017a}
 
 
-  Using prior knowledge to build a Bayesian distribution for each interaction probability allows us to set appropriate bounds on interaction probabilities for species which were rarely or never observed co-occurring. In such cases, an informative prior distribution gives us more reasonable estimates of interaction probabilities than assuming that $p$=0 for unobserved interactions. This approach is particularly useful when considering interactions involving species entering new ranges due to climate change or introductions. Understanding these species' interactions is important for a variety of conservation questions, and a Bayesian approach using a trait-matching model or data from species' current ranges could help us to anticipate how species will integrate into new communities. 
+  Using prior knowledge to build a Bayesian distribution for each interaction probability allows us to set appropriate bounds on interaction probabilities for species which were rarely or never observed co-occurring. In such cases, an informative prior distribution gives us more reasonable estimates of interaction probabilities than assuming that $p$=0 for unobserved interactions. This approach is particularly useful when considering interactions involving species entering new ranges due to climate change or introductions. Understanding these species' interactions is important for a variety of conservation questions~\citep{Bartomeus2013,Gravel2013}, and a Bayesian approach using a trait-matching model or data from species' current ranges could help us to anticipate how species will integrate into new communities. 
 
 
   Our results also demonstrate how incomplete detection of interactions scales up to affect network structure. The structure of the well-sampled network used in our case study is most similar to the structure of simulated networks including only 50\% of the interactions suggested by the posterior distribution of interaction probabilities. If our descriptions of empirical systems are missing up to half of the feasible interactions, then it is vital to acknowledge this inherent uncertainty before comparing structures across systems or relating structure to stability.
